# PowerGrade

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
docs/: BALANCE.md  CAMERAS.md  CREATING-LUTS.md  DENSITY.md  FILM-EMULATION.md  GAMMA.md  LUTS.md
install/: install-macos.command  install-windows.bat
luts/: PowerGrade Cinematic Landscape.cube  PowerGrade Desert Day.cube  PowerGrade Golden Hour.cube  PowerGrade Midnight Blue.cube  PowerGrade Silver Bleach.cube  PowerGrade Teal Orange.cube  generate_luts.py
src/: CubeLUT.h  CudaKernel.cu  Info.plist  MetalKernel.mm  OpenCLKernel.cpp  PowerGrade.cpp  PowerGrade.h  PowerGradePipeline.h
test/: pipeline_test.cpp
